js/src/jsapi-tests/binast/invalid/tests/labelled-break-outside-while.js
foo: while (true) {
  break foo;
}
